--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
         "type": "git",
         "url": "https://github.com/TryGhost/Casper.git"
     },
+    "scripts": {
+        "build-css": "gulp css"
+    },
     "bugs": "https://github.com/TryGhost/Casper/issues",
     "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
     "devDependencies": {
